# transformers-exercise-jax

./: README.md
2026/: inference.py  pyproject.toml  train_grokking.py
2026/src/: model.py  sampling.py
mingpt_scripts/: requirements.txt  sample.py  train_char.py
