[project]
name = "transformer2026"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "jax[cuda12]>=0.9.0.1; sys_platform == 'linux'",
    "jax>=0.9.0.1; sys_platform != 'linux'",
    "tyro==1.0.8",
    "safetensors",
    "huggingface-hub",
    "tokenizers",
]

[[tool.uv.index]]
name = "jax-cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
explicit = true

[tool.ruff.lint]
ignore = ["E731"]
